# footage-download-manager

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
docs/superpowers/specs/: 2026-06-22-download-lane-isolation-design.md
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
scripts/: build-windows.ps1  fetch-ffmpeg.mjs  fetch-rclone.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: accounts.rs  bdm.rs  download.rs  drive.rs  dropbox.rs  hls.rs  index.rs  index_store.rs  ingest.rs  lib.rs  main.rs  secrets.rs  transfer.rs  wetransfer.rs
src-tauri/src/rclone/: config.rs  supervisor.rs
src-tauri/tests/: rclone_daemon.rs
src/components/: AddAccountDialog.tsx  AddLinkDialog.tsx  AppShell.tsx  BrowsePane.test.tsx  BrowsePane.tsx  ConnectView.tsx  DownloadsDock.tsx  DownloadsView.tsx  IndexProgress.tsx  ProfileView.test.tsx  ProfileView.tsx  ReviewPlayer.tsx  ReviewView.tsx  SettingsDialog.tsx  SettingsView.tsx  Sidebar.tsx  SidebarTree.tsx  TopBar.tsx  UpdateBanner.tsx  UrlDownload.tsx  ui.tsx
src/components/ui/: ContextMenu.tsx  Tooltip.tsx
src/lib/: account-index.test.ts  account-index.ts  format.test.ts  format.ts  ingest.test.ts  ingest.ts  lane.test.ts
src/lib/rc/: browse.test.ts  browse.ts  client.test.ts  client.ts  types.ts
src/lib/tauri/: commands.ts
src/store/: account-meta.ts  app.ts  browse.ts  history.ts  index-store.ts  review.ts  starred.ts  toast.ts  transfers.test.ts  transfers.ts
