[package]
name = "google-drive-downloader"
version = "0.1.10"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "google_drive_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
rand = "0.10.1"
# rustls-tls is required for the external HTTPS calls (Google/Dropbox token +
# API endpoints); loopback rc calls are plain HTTP but need a TLS backend present.
reqwest = { version = "0.13", default-features = false, features = ["blocking", "default-tls"] }
tokio = { version = "1", features = ["time"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
# Local loopback streaming proxy (review player) + PDF byte decoding.
tiny_http = "0.12"
base64 = "0.22"

# keyring is per-target: each OS needs its own native credential-store backend.
# Without a native feature, keyring v3 silently falls back to an in-memory MOCK
# store, so secrets would appear to save then vanish on restart.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

